--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-handlebars": "^7.0.2",
     "helmet": "^6.0.1",
     "mongoose": "^6.9.1",
     "nodemailer": "^6.9.1",
