--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "seemetracker-waitlist-api",
+  "name": "flowday-waitlist-api",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -19,7 +19,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
-    "express-handlebars": "^7.0.2",
+    "express-handlebars": "6.0.0",
     "helmet": "^6.0.1",
     "mongoose": "^6.9.1",
     "nodemailer": "^6.9.1",
