--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server"
   },
@@ -19,6 +18,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-handlebars": "^7.0.4",
     "helmet": "^6.0.1",
     "mongoose": "^6.9.1",
     "nodemailer": "^6.9.1",
